# 2021-tfg-carlos-caminero

./: .gitignore  .gitmodules  README.md  comandos_desarrollo  dependencias
amazon_hospital/hospital_world/: CMakeLists.txt  nota.urdf  package.xml
amazon_hospital/hospital_world/launch/: hospital_follow_person.launch.py  hospital_with_animated_person_world.launch.py  hospital_world.launch.py
amazon_hospital/hospital_world/src/: person.cpp
amazon_hospital/hospital_world/worlds/: hospital_with_animated_person.world
animations/animated_cube/: CMakeLists.txt  package.xml
animations/animated_cube/launch/: cube_world.launch.py
animations/animated_cube/worlds/: animated_box.world
animations/animated_person/: CMakeLists.txt  package.xml
animations/animated_person/launch/: animated_person.launch.py
animations/animated_person/worlds/: animated_person.world
animations/test_world/: CMakeLists.txt  Readme.md  package.xml
animations/test_world/launch/: test_world.launch.py
animations/test_world/worlds/: hospital.world
docker_images/pubsub/: Dockerfile  publisher  subscriber
docker_images/pubsub/py_pubsub/: Dockerfile  package.xml  setup.py
docker_images/pubsub/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
docker_images/ros-foxy/: Dockerfile
docs/: _config.yml  index.md
docs/_data/: navigation.yml
docs/_includes/: breakout_example.html  img_background.html
docs/_pages/: 404.md  about.md  category-archive.md  tag-archive.md  year-archive.md
docs/_posts/: 2010-01-07-post-standard.md
docs/_posts/training-stage/: 2021-10-20-semana-1.md  2021-10-27-semana-2-1.md  2021-10-27-semana-2-2.md  2021-10-27-semana-2-3.md  2021-10-29-semana-1.md  2021-10-29-semana-2-1.md  2021-11-10-semana-4.md  2021-11-14-semana-3.md  2021-11-17-semana-5.md  2021-11-24-semana-6-7.md  2021-11-24-semana-6.md  2021-12-20-semana-8.md  2022-01-23-semana-9-10.md  2022-01-30-semana-11.md  2022-02-06-semana-12.md  2022-02-13-semana-13.md  2022-02-20-semana-14.md  2022-02-27-semana-15.md  2022-03-06-semana-16.md  2022-03-27-semana-17-18.md  2022-04-02-semana-19.md  2022-04-10-semana-20-21.md
follow_person/: package.xml  setup.cfg  setup.py
follow_person/follow_person/: HAL.py  Readme.md  follow_person_main.py
follow_person/fps_tests/: darknet_ros_hz  fps.py  plot_hz.py  ssd_hz
follow_person/launch/: follow_person.launch.py
follow_person/radi_base/: Readme.md  manager.py  mi-dockerfile-foxy
follow_person/robotics_academy/: README.md
follow_person/robotics_academy/exercises/static/exercises/follow_person/web-template/: exercise.py  hal.py
follow_person/robotics_academy/exercises/templates/exercises/: base_teleop.html
follow_person/robotics_academy/exercises/templates/exercises/follow_person/: exercise.html
follow_person/robotics_academy/my_solution/: academy.py
follow_person/robotics_academy/my_solution/follow_person/: academy.py
follow_person/robotics_academy/my_solution/real_follow_person/: academy.py
follow_person/robotics_academy/my_solution/tests/: tracker.py
memoria/: Makefile  bibliografia.bib  estilo.tex  memoria.tex  portada.tex  resumen.tex
memoria/capitulos/: capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex  capitulo6.tex  conclusiones.tex
memoria/portada/: acronimos.tex  agradecimientos.tex  indice.tex  portada.tex  resumen.tex
person_teleop/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  proxy.cpp  proxy.h
scripts/: set_cuda_darknet.sh
training_stage/: README.md
training_stage/behavior_trees/bumpgo/: CMakeLists.txt  package.xml
training_stage/behavior_trees/bumpgo/behavior_trees_xml/: bumpgo.xml
training_stage/behavior_trees/bumpgo/include/bumpgo/: BackwardAction.hpp  TurnAction.hpp
training_stage/behavior_trees/bumpgo/src/bumpgo/: ForwardAction.cpp
training_stage/behavior_trees/bumpgo_py/bumpgo_py/: bumpgo_main.py
training_stage/behavior_trees/example_interfaces/: CMakeLists.txt  package.xml
training_stage/behavior_trees/example_interfaces/srv/: BatteryOption.srv
training_stage/behavior_trees/follow_person/: .CMakeLists.txt  .package.xml
training_stage/behavior_trees/follow_person/behavior_tree/: follow_person.xml  follow_person_test.xml
training_stage/behavior_trees/follow_person/config/: params.yaml
training_stage/behavior_trees/follow_person/include/follow_person/: FollowAction.hpp  SearchAction.hpp
training_stage/behavior_trees/follow_person/launch/: follow_person.launch.py
training_stage/behavior_trees/follow_person/src/: main.cpp
training_stage/behavior_trees/follow_person/src/follow_person/: FollowAction.cpp  SearchAction.cpp
training_stage/behavior_trees/test_bts/: CMakeLists.txt  package.xml
training_stage/behavior_trees/test_bts/bts_xml/: vacuum_cleaner.xml
training_stage/behavior_trees/test_bts/include/test_bts/vacuum_cleaner/: CheckBattery.hpp  CleanAction.hpp  Recharge.hpp
training_stage/behavior_trees/test_bts/src/: battery_monitor.cpp  vacuum_cleaner.cpp
training_stage/behavior_trees/test_bts/src/test_bts/vacuum_cleaner/: CheckBattery.cpp  CleanAction.cpp  Recharge.cpp
training_stage/bumpgo/include/bumpgo/: ForwardAction.hpp  ScanAction.hpp
training_stage/bumpgo/src/: bumpgo.cpp
training_stage/bumpgo/src/bumpgo/: BackwardAction.cpp  ScanAction.cpp  TurnAction.cpp
training_stage/bumpgo_py/: package.xml  setup.cfg  setup.py
training_stage/bumpgo_py/bumpgo_py/: __init__.py
training_stage/kobuki/kobuki_control_docker/: Dockerfile  run_docker
training_stage/plugins/polygon_base/: CMakeLists.txt  package.xml
training_stage/plugins/polygon_base/include/polygon_base/: regular_polygon.hpp
training_stage/plugins/polygon_plugins/: CMakeLists.txt  package.xml
training_stage/turtlebot2/urdf/: structures.urdf.xacro
turtlebot2/: Readme.md
turtlebot2/kobuki_base/kobuki_ros/kobuki_keyop/src/: keyop.cpp
turtlebot2/turtlebot2/launch/: spawn_model.launch.py
turtlebot2/turtlebot2/urdf/: colors.urdf.xacro  turtlebot2.urdf  turtlebot2.urdf.xacro
(+11 files in other folders)
